modified:   .vscode/launch.json 	modified:   dsa/Searching/Find a Peak Element  efficient .java 	new file:   dsa/Searching/Repeating Elements efficient.java 	new file:   dsa/Searching/Search in Infinite Sized Array(unbounded binary search algo).java 	new file:   dsa/Searching/Search in Sorted Rotated Array efficient .java 	new file:   dsa/Searching/Square root efficient .java 	new file:   dsa/Searching/Two Pointers Approach  efficient .java 	new file:   dsa/Sorting/Bubble Sort  .java 	new file:   dsa/Sorting/Bubble Sort  efficient .java 	new file:   dsa/Sorting/Insertion Sort.java 	new file:   dsa/Sorting/Selection Sort efficient.java 	new file:   dsa/Sorting/Selection Sort naive.java

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,83 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Solution",
+            "request": "launch",
+            "mainClass": "Solution",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Selection_sort_efficient",
+            "request": "launch",
+            "mainClass": "Selection_sort_efficient",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Selection_sort_naive",
+            "request": "launch",
+            "mainClass": "Selection_sort_naive",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Bublesort_efficiient",
+            "request": "launch",
+            "mainClass": "Bublesort_efficiient",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Bublesort",
+            "request": "launch",
+            "mainClass": "dsa.Sorting.Bublesort",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Bublesort",
+            "request": "launch",
+            "mainClass": "Bublesort",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Repeating_element",
+            "request": "launch",
+            "mainClass": "Repeating_element",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Two_pointer_approch",
+            "request": "launch",
+            "mainClass": "Two_pointer_approch",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch search_sorted_array",
+            "request": "launch",
+            "mainClass": "search_sorted_array",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Search_infinite_size",
+            "request": "launch",
+            "mainClass": "Search_infinite_size",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Find_sqroot_floor",
+            "request": "launch",
+            "mainClass": "Find_sqroot_floor",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
             "name": "Launch Peak_element_efficient",
             "request": "launch",
             "mainClass": "Peak_element_efficient",
