modified:   .vscode/launch.json 	new file:   dsa/Sorting/Count inversions in Array  naive.java 	new file:   dsa/Sorting/Count inversions in Array efficient.java 	new file:   dsa/Sorting/Intersection of two sorted arrays  efficient.java 	new file:   dsa/Sorting/Kth Smallest Element. naive.java 	new file:   dsa/Sorting/Naive partition.java 	new file:   dsa/Sorting/Union of two sorted arrays  efficient.java 	new file:   dsa/Sorting/Union of two sorted arrays naive.java 	new file:   dsa/Stack/Array Implementation of Stack in Java.java 	new file:   dsa/String/Check for Anagram  efficient.java 	new file:   dsa/String/Check for Anagram naive .java 	new file:   dsa/String/Check if a String is Subsequence of Other naive.java 	new file:   dsa/String/Check if a String is Subsequence of Other recursive.java 	new file:   dsa/String/Leftmost Non-repeating Element  naive .java 	new file:   dsa/String/Leftmost Non-repeating Element better.java 	new file:   dsa/String/Leftmost Repeating Character better.java 	new file:   dsa/String/Leftmost Repeating Character efficient.java 	new file:   dsa/String/Leftmost Repeating Character naive.java 	new file:   dsa/String/Palindrome Check efficient.java 	new file:   dsa/String/Palindrome Check.java

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,146 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Leftmost_non_repeating_better",
+            "request": "launch",
+            "mainClass": "Leftmost_non_repeating_better",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Leftmost_non_repeating",
+            "request": "launch",
+            "mainClass": "Leftmost_non_repeating",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Leftmost_repeating_efficient",
+            "request": "launch",
+            "mainClass": "Leftmost_repeating_efficient",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Leftmost_repeating_better",
+            "request": "launch",
+            "mainClass": "Leftmost_repeating_better",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Leftmost_repeating",
+            "request": "launch",
+            "mainClass": "Leftmost_repeating",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch find_anagram_efficient",
+            "request": "launch",
+            "mainClass": "find_anagram_efficient",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Anagram",
+            "request": "launch",
+            "mainClass": "Anagram",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch find_subsequence",
+            "request": "launch",
+            "mainClass": "find_subsequence",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch fin_subseques",
+            "request": "launch",
+            "mainClass": "fin_subseques",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Find_subset",
+            "request": "launch",
+            "mainClass": "Find_subset",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch To_find_subseue",
+            "request": "launch",
+            "mainClass": "To_find_subseue",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Plaindrome_efficient",
+            "request": "launch",
+            "mainClass": "Plaindrome_efficient",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Plaindrome",
+            "request": "launch",
+            "mainClass": "Plaindrome",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Plaindrome",
+            "request": "launch",
+            "mainClass": "dsa.String.Plaindrome",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Kth_smallest",
+            "request": "launch",
+            "mainClass": "Kth_smallest",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Array_implemetation",
+            "request": "launch",
+            "mainClass": "dsa.Stack.Array_implemetation",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Count_inversions",
+            "request": "launch",
+            "mainClass": "Count_inversions",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Union_Efficient",
+            "request": "launch",
+            "mainClass": "Union_Efficient",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Union_naive",
+            "request": "launch",
+            "mainClass": "Union_naive",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Intersection_efficeint",
+            "request": "launch",
+            "mainClass": "Intersection_efficeint",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
             "name": "Launch Intersection_of_sotred_array",
             "request": "launch",
             "mainClass": "Intersection_of_sotred_array",
