modified:   .vscode/launch.json 	new file:   dsa/Mathematics/All Divisors of a Number  more efficientsorted.java 	new file:   dsa/Mathematics/All Divisors of a Number .java new file:   dsa/Mathematics/All Divisors of a Number efficient.java 	new file:   dsa/Mathematics/Check for Prime efficient.java 	new file:   dsa/Mathematics/Check for Prime more effi.java 	new file:   dsa/Mathematics/Check for Prime.java 	new file:   dsa/Mathematics/Prime Factors .java 	new file:   dsa/Mathematics/Prime Factors efficient.java 	new file:   dsa/Mathematics/Prime Factors more efficient.java 	new file:   dsa/Recursion/Printing all Permutations.java 	renamed:    dsa/factorial using recursion.py -> dsa/Recursion/factorial using recursion.py 	renamed:    dsa/print  N to 1 in  using recursion.py -> dsa/Recursion/print  N to 1 in  using recursion.py 	renamed:    dsa/tail recurssion.py -> dsa/Recursion/tail recurssion.py

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,76 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Printing_permutation",
+            "request": "launch",
+            "mainClass": "dsa.Recursion.Printing_permutation",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch All_divisor_effi_sorted",
+            "request": "launch",
+            "mainClass": "All_divisor_effi_sorted",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch All_divisor_effi",
+            "request": "launch",
+            "mainClass": "All_divisor_effi",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch All_divisor",
+            "request": "launch",
+            "mainClass": "All_divisor",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Prime_factor_more_efficient",
+            "request": "launch",
+            "mainClass": "Prime_factor_more_efficient",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Prime_factor_efficient",
+            "request": "launch",
+            "mainClass": "Prime_factor_efficient",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Prime_factor_naive",
+            "request": "launch",
+            "mainClass": "Prime_factor_naive",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Prime_effi_more",
+            "request": "launch",
+            "mainClass": "Prime_effi_more",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Prime_effi",
+            "request": "launch",
+            "mainClass": "Prime_effi",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Prime",
+            "request": "launch",
+            "mainClass": "Prime",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
             "name": "Launch LCM_efficient",
             "request": "launch",
             "mainClass": "LCM_efficient",
